GNOME Bugzilla – Bug 749927
AtkWrapper warnings should not print unless JAW_DEBUG=1
Last modified: 2015-05-26 21:07:49 UTC
It would be useful to be able to turn off the debug warnings in AtkWrapper.c for normal users who do not need them.
Created attachment 304042 [details] [review] Patch to address problem