JNI: only show warnings with JAW_DEBUG=1

Bug: https://bugzilla.gnome.org/show_bug.cgi?id=749927